<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.guilherme.recordphonecall.NotesActivity"
    tools:showIn="@layout/activity_notes">

    <LinearLayout android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:layout_width="match_parent">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_text_notes"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/txtNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25px"
            android:backgroundTint="@color/colorDefault"
            android:hint="@string/notes"
            />
        <CheckBox
            android:id="@+id/chkDisplayOnce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/display_only_once"/>
    </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="100px"
            android:layout_below="@id/input_layout_port"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="75px"
            android:background="@drawable/standard_button"
            android:gravity="center"
            android:text="@string/save"
            android:textAlignment="gravity"
            android:textColor="@color/colorWhite" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
